# wrench-python-api

./: .compute_coverage.sh  .coveragerc  .gitignore  README.md  pyproject.toml  setup.py  simulator.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-docker.yml  build.yml
dev/: DEVELOPMENT.md  overall_architecture.drawio
docs/: Makefile  requirements.txt
docs/source/: api_action.rst  api_bare_metal_compute_service.rst  api_cloud_compute_service.rst  api_compound_job.rst  api_compute_action.rst  api_compute_service.rst  api_file.rst  api_file_copy_action.rst  api_file_delete_action.rst  api_file_read_action.rst  api_file_registry_service.rst  api_file_write_action.rst  api_simulation.rst  api_simulation_item.rst  api_sleep_action.rst  api_standard_job.rst  api_storage_service.rst  api_task.rst  api_virtual_machine.rst  api_workflow.rst  conf.py  index.rst
example/: demo-simulator.py  demo_simulator.py  run_all_examples.sh  simulator.py
example/compound_job_simulator/: demo_simulator.py
example/json_workflow_simulator/: simulator.py
example/simple_simulator/: sample_platform.xml  simulator.py
examples/: README  run_all_examples.sh  sample_platform.xml  simulator.py  three_host_platform.xml
examples/compound_job_simulator/: simulator.py
examples/json_workflow_simulator/: one_host_and_several_clusters.xml  sample_wfcommons_workflow.json  simulator.py
examples/simple_simulator/: simulator.py
python-client-demo/: python-client.py  simulator.py  three_host_platform.xml
python-client-demo/pywrench/: exception.py  pywrench.py  simulation.py  simulation_item.py  standard_job.py  task.py
server/: CMakeLists.txt  SimulationThreadState.cpp  SimulationThreadState.h  server.cpp  workflow_manager.cpp  workflow_manager.h
server/CMakeModules/: FindSimGrid.cmake
tests/: bare_metal_compute_service_test.py  batch_compute_service_test.py  batch_platform.xml  bogus_platform.xml  cloud_compute_service_test.py  compound_job_test.py  file_registry_service_test.py  run_all_tests.sh  sample_platform.xml  simulation_events_test.py  simulation_events_test.py_DISABLED  storage_service_test.py  workflow_job_task_test.py  workflow_simulator_test.py  workflow_test.py
wrench/: __init__.py  action.py  api.py  bare_metal_compute_service.py  batch_compute_service.py  cloud_compute_service.py  compound_job.py  compute_action.py  compute_service.py  exception.py  file.py  file_copy_action.py  file_delete_action.py  file_read_action.py  file_registry_add_entry_action.py  file_registry_service.py  file_write_action.py  simulation.py  simulation_item.py  sleep_action.py  standard_job.py  storage_service.py  task.py  version.py  virtual_machine.py  workflow.py
wrench-api/: compute_service.py  pywrench.py  simulation.py  standard_job.py  task.py
wrench-daemon/: CMakeLists.txt  four_hosts.xml  three_host_platform.xml
wrench-daemon/doc/: index.html
wrench-daemon/include/: BlockingQueue.h  KeyValueStore.h  REST_API.h  REST_API.h.in  REST_API_generated_code.h  SimulationController.h  SimulationDaemon.h  SimulationLauncher.h  SimulationThreadState.h  WRENCHDaemon.h  httplib.h
wrench-daemon/scripts/: generate_REST_API.py
wrench-daemon/src/: SimulationController.cpp  SimulationDaemon.cpp  SimulationLauncher.cpp  SimulationThreadState.cpp  WRENCHDaemon.cpp  main.cpp  wrench-daemon.cpp
